# lambda-calc

./: README.md  pyproject.toml
lambda_calc/: __init__.py  ast.py  core.py  parser.py  repl.py  wrapper.py
tests/: test_core.py  test_parser.py  test_reducer.py
